k8s-webapp/k8s-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-deployment
#  namespace:
spec:
  selector:
    matchLabels:
      app: hello-world-label
  replicas: 1
  template:
    metadata:
      labels:
        app: hello-world-label
    spec:
      containers:
        - name: hello-world-container
          image: technicallyjoe/hello-world-container:1.0.4
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
  labels:
    app: hello-world-label
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
  selector:
    app: hello-world-label
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  #namespace: test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "test.myowndomain.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-world-service
                port:
                  number: 80
